--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ before_install:
   - go get github.com/mattn/goveralls
 script:
   - test -z "`gofmt -l .`"
+  - test -z "`golint ./...`"
   - $GOPATH/bin/goveralls -service=travis-ci
   - cd example && go build -o http_breaker && ./http_breaker
