--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,11 @@ jobs:
       matrix:
         go-version: [1.22.x, 1.23.x]
         os: [ubuntu-latest]
+        work-dir: ['./', 'v2']
     runs-on: ${{matrix.os}}
+    defaults:
+      run:
+        working-directory: ${{matrix.work-dir}}
     steps:
     - name: Setup Go
       uses: actions/setup-go@v5
