--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
       matrix:
         go-version: [1.22.x, 1.23.x]
         os: [ubuntu-latest]
-        work-dir: ['./', 'v2']
+        work-dir: ["./", "./v2"]
     runs-on: ${{matrix.os}}
     defaults:
       run:
