--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,11 +6,12 @@ jobs:
       matrix:
         go-version: [1.22.x, 1.23.x]
         os: [ubuntu-latest]
-        work-dir: ["./", "./v2"]
+        # work-dir: ["./", "./v2"]
     runs-on: ${{matrix.os}}
     defaults:
       run:
-        working-directory: ${{matrix.work-dir}}
+        # working-directory: ${{matrix.work-dir}}
+        working-directory: ./v2
     steps:
     - name: Setup Go
       uses: actions/setup-go@v5
