--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,12 +6,11 @@ jobs:
       matrix:
         go-version: [1.22.x, 1.23.x]
         os: [ubuntu-latest]
-        # work-dir: ["./", "./v2"]
+        work-dir: ["./", "./v2"]
     runs-on: ${{matrix.os}}
     defaults:
       run:
-        # working-directory: ${{matrix.work-dir}}
-        working-directory: ./v2
+        working-directory: ${{matrix.work-dir}}
     steps:
     - name: Setup Go
       uses: actions/setup-go@v5
@@ -24,6 +23,6 @@ jobs:
     - name: Lint
       uses: golangci/golangci-lint-action@v6
     - name: go test
-      run: go test -v ./...
+      run: pwd && go test -v ./...
     - name: Run example
-      run: cd example && go build -o http_breaker && ./http_breaker
+      run: cd example && pwd && go build -o http_breaker && ./http_breaker
